--- a/src/assets/styles/_utilities.scss
+++ b/src/assets/styles/_utilities.scss
@@ -43,6 +43,7 @@
   @include display-flex;
   @include align-items(stretch);
   @include justify-content(stretch);
+  margin: auto;
   >.card{
     width: 100%;
     min-width: 100%;
