--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -273,9 +273,13 @@ $table-inverse-color: color(white);
 ////////// MEASUREMENT AND PROPERTY VARIABLES //////////
 
 $border-property: 1px solid $border-color;
-$card-spacing-y: 2.5rem;
-$card-padding-y: 2.5rem;
-$card-padding-x: 2.5rem;
+// $card-spacing-y: 2.5rem;
+// $card-padding-y: 2.5rem;
+// $card-padding-x: 2.5rem;
+$card-spacing-y: 1.5rem;
+$card-padding-y: 1.5rem;
+$card-padding-x: 1.5rem;
+
 $card-border-radius: .3125rem;
 $grid-gutter-width: 40px;
 $action-transition-duration: 0.25s;
