--- a/src/app/barcode-ui/Barcode.css
+++ b/src/app/barcode-ui/Barcode.css
@@ -1,5 +1,25 @@
+.container-style{
+  padding: 1.5rem 1.5rem 0.1rem 1.5rem;
+
+}
 .App {
     font-family: sans-serif;
     text-align: center;
   }
   
+.header {
+  color: green
+}
+
+@media print {
+  * {
+    display: none;
+  }
+  .content {
+    display: block;
+  }
+  .header {
+    color: red;
+    display: block;
+  }  
+}  
