--- a/src/app/inventory-ui/inventory.css
+++ b/src/app/inventory-ui/inventory.css
@@ -50,3 +50,33 @@
 
  }
  
+ .total-row {
+    display: flex;
+    border-bottom: 1px solid grey;
+    padding: 20px;
+    padding-right: 96px;
+    font-weight: bold;
+ }
+
+ .total-heading {
+    flex: 1;
+    text-align: left;
+ }
+
+ .total-mrp {
+    width: 80px;
+    text-align: right;
+    padding: 0 24px;
+ }
+
+ .total-sale {
+    width: 140px;
+    text-align: right;
+    padding: 0 24px;
+ }
+
+ .total-quantity {
+    width: 100px;
+    text-align: right;
+    padding: 0 24px;
+ }
