--- a/src/assets/styles/_misc.scss
+++ b/src/assets/styles/_misc.scss
@@ -56,7 +56,7 @@ body {
 
 .content-wrapper {
   background: $content-bg;
-  padding: 2.75rem 2.25rem;
+  padding: 0.7rem;
   width: 100%;
   @include flex-grow(1);
 }
